# RONN

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TASKS.md  clippy.toml  deny.toml  getting_ready_challenge.md  rust-toolchain.toml  rustfmt.toml
.claude/: settings.local.json
.github/workflows/: benchmarks.yml  ci.yml  integration-tests.yml
.memory_bank/: README.md  crate_structure.md  critical_files.md  implementation_status.md  project_overview.md  technical_decisions.md
benches/: comparative.rs  core_operations.rs  end_to_end.rs  end_to_end_simple.rs  integration.rs  regression.rs
benches/common/: mod.rs
benches/comparative/: mod.rs  vs_onnx_runtime.rs
benches/comparative_impl/: vs_onnx_runtime.rs
benches/integration/: main.rs  mod.rs  multi_provider.rs  optimization_impact.rs
benches/regression/: baseline.rs  main.rs  mod.rs
crates/ronn-api/: Cargo.toml
crates/ronn-api/src/: error.rs  lib.rs  model.rs  session.rs
crates/ronn-api/tests/: common.rs  concurrent_tests.rs  error_tests.rs  integration_tests.rs  model_api_tests.rs  session_options_tests.rs
crates/ronn-api/tests/fixtures/: add_model.onnx  create_fixtures.py  simple_model.onnx
crates/ronn-core/: Cargo.toml
crates/ronn-core/benches/: tensor_benchmarks.rs
crates/ronn-core/src/: error.rs  graph.rs  lib.rs  session.rs  tensor.rs  types.rs
crates/ronn-core/src/ops/: arithmetic.rs  matrix.rs  mod.rs  reduction.rs  shape.rs
crates/ronn-core/tests/: integration_tests.rs  property_tests.rs  session_tests.rs  tensor_arithmetic_tests.rs  tensor_matrix_tests.rs  tensor_reduction_tests.rs  tensor_shape_tests.rs  test_utils.rs
crates/ronn-graph/: Cargo.toml
crates/ronn-graph/benches/: optimization_benchmark.rs
crates/ronn-graph/src/: error.rs  lib.rs  optimizer.rs
crates/ronn-graph/src/passes/: constant_folding.rs  dead_code.rs  fusion.rs  layout.rs  mod.rs  provider_specific.rs
crates/ronn-graph/tests/: test_constant_folding.rs  test_correctness.rs  test_dead_code_elimination.rs  test_edge_cases.rs  test_fusion.rs  test_layout_optimization.rs  test_optimizer.rs  test_provider_specific.rs
crates/ronn-graph/tests/common/: mod.rs
crates/ronn-hrm/: Cargo.toml
crates/ronn-hrm/src/: complexity.rs  executor.rs  lib.rs  router.rs
crates/ronn-learning/: Cargo.toml
crates/ronn-learning/src/: ewc.rs  lib.rs  replay.rs  timescales.rs
crates/ronn-memory/: Cargo.toml
crates/ronn-memory/src/: consolidation.rs  episodic.rs  lib.rs  semantic.rs  working.rs
crates/ronn-onnx/: Cargo.toml  build.rs  build.rs.disabled
crates/ronn-onnx/proto/: onnx.proto
crates/ronn-onnx/src/: error.rs  lib.rs  loader.rs  proto.rs  types.rs
crates/ronn-onnx/src/ops/: activations.rs  math.rs  mod.rs  neural_network.rs  tensor_ops.rs
crates/ronn-onnx/tests/: protobuf_loader_test.rs  test_activations.rs  test_integration.rs  test_loader.rs  test_math.rs  test_neural_network.rs  test_parser_robustness.rs  test_tensor_ops.rs  test_types.rs
crates/ronn-providers/: Cargo.toml
crates/ronn-providers/benches/: multi_gpu_benchmarks.rs
crates/ronn-providers/scripts/: run_multi_gpu_tests.ps1  run_multi_gpu_tests.sh
crates/ronn-providers/src/: allocator.rs  compiler.rs  lib.rs  registry.rs
crates/ronn-providers/src/bitnet/: allocator.rs  kernels.rs  mod.rs  provider.rs  quantization.rs
crates/ronn-providers/src/cpu/: allocator.rs  kernels.rs  mod.rs  provider.rs  simd.rs
crates/ronn-providers/src/custom/: example_npu.rs  example_tpu.rs  mod.rs  registry.rs  traits.rs
crates/ronn-providers/src/gpu/: allocator.rs  cuda_kernels.rs  memory_manager.rs  mod.rs  provider.rs  topology.rs
crates/ronn-providers/src/wasm/: allocator.rs  bridge.rs  kernels.rs  mod.rs  provider.rs
crates/ronn-providers/tests/: README.md  basic_tests.rs  cpu_provider_tests.rs  edge_case_tests.rs  integration_tests.rs  memory_management_tests.rs  multi_gpu_integration_tests.rs  performance_comparison_tests.rs  provider_framework_tests.rs  specialized_provider_tests.rs  unit_tests.rs  unit_tests.rs.disabled
docs/: brain_inspired_design.md  c4_component_diagram.mermaid  c4_container_diagram.mermaid  c4_context_diagram.mermaid  execution_provider_design.md  implementation_roadmap.md  rust_ml_architecture.md
examples/brain-features/: Cargo.toml
examples/brain-features/src/: main.rs
examples/models/: README.md
examples/onnx-model/: Cargo.toml
examples/onnx-model/src/: main.rs
examples/simple-inference/: Cargo.toml
examples/simple-inference/src/: main.rs
models/: download_models.py
scripts/: build-release.sh  generate_test_model.py  setup.sh
tests/integration/: Cargo.toml  common.rs  lib.rs  test_bert.rs  test_gpt.rs  test_resnet.rs
