[package]
name = "ronn-onnx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
ronn-core = { path = "../ronn-core" }

# ONNX protobuf support (using simplified types for now)
# prost = { workspace = true }
# prost-types = "0.12"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# [build-dependencies]
# prost-build = "0.12"

[lints]
workspace = true
