[package]
name = "onnx-model"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
ronn-api = { path = "../../crates/ronn-api" }
ronn-core = { path = "../../crates/ronn-core" }
ronn-onnx = { path = "../../crates/ronn-onnx" }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
