[package]
name = "simple-inference"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
ronn-api = { path = "../../crates/ronn-api" }
ronn-core = { path = "../../crates/ronn-core" }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
